src/assets/css/welcome.css
/* ... */
.mhacks-last-contact-input-header {
  font-family: 'Muli', sans-serif;
  font-size: 1.2em;
  font-weight: 200;
  color: #283149;
  margin-bottom: 2%;
}

.mhacks-last-contact-input-bg {
  background-image: url('../images/mailvect.svg');
  background-repeat: no-repeat;
  width: 100%;
  height: 500px;
  background-position-x: 100%;
}

.mhacks-last-footer-bg {
  margin-top: 5%;
  background-image: url('../images/btmvect.svg');
  background-repeat: no-repeat;
  width: 100%;
  height: 200px;
}

/* Media Queries */
@media only screen and (max-width: 1537px){
  .contact-btn{
    margin-right: 12vw;
  }
  .business-btn{
    margin-right: -3vw;
  }
  .about-btn{
    margin-right: -2vw;
  }
  .students-btn{
    margin-right: -2vw;
  }
  .mhacks-top-header{
    font-size: 3.7em;
  }
  .mhacks-mid-mission-content{
    margin-left: 10%;
    width: 524px;
  }
  .mhacks-mid-mission-sec-bg{
    width: 1101px;
    float: right;
    height: 850px;
  }
  .mhacks-mid-team-header{
    margin-top: -19%;
  }
}
/* Laptop screens(upto 1400 px) */
@media only screen and (max-width: 1400px){
  .mhacks-tn-left-logo {
    padding: 15px 10px;
    padding-top: 16px;
  }
  
  .mhacks-tn-left-logo a {
    padding: 15px 10px;
    padding-top: 16px;
  }
  
  .mhacks-tn-right-item {
    padding: 15px 10px;
    margin-left: -16vw;
    margin-right: 16vw;
  }
  
  .mhacks-tn-right-item a {
    padding: 15px 10px;
  }
  
  .mhacks-tn-right-item a:hover {
    padding: 15px 10px;
  }

  .mhacks-top-bg{
    height: 700px;
  }

  .mhacks-top-header{
    font-size: 3.4em;
    margin-top: 14%;
  }

  .mhacks-top-para{
    font-size: 1.7em;
  }

  .mhacks-top-btn{
    font-size: 1.3em;
    width: 155px;
    height: 48px;
  }

  .mhacks-mid-bg, .mhacks-mid-bg-business{
    height: 130px;
  }

  .mhacks-mid-bg-business{
    margin-top: 6%;
  }

  .mhacks-mid-header{
    font-size: 3em;
    padding-top: 3%;
  }

  .mhacks-mid-header-business{
    font-size: 3em;
    padding-top: 3%;
    padding-right: 25%;
  }

  .mhacks-mid-ft{
    height: 520px;
  }

  .mhacks-mid-ft-content{
    height: 130px;
  }

  .mhacks-mid-ft-text{
    font-size: 3.1em;
    padding-left: -26%;
    padding-top: 7%;
  }
  
  /* .mhacks-mid-container{
    margin-left: 6%;
  } */

  .mhacks-mid-mission-text{
    font-size: 3.1em;
  }

  .mhacks-mid-mission-bg{
    height: 140px;
  }

  .mhacks-mid-mission-sec-bg{
    width: 1100px;
    float: right;
    margin-right: -2vw;
  }

  .mhacks-mid-mission-content{
    margin-top: 10%;
    margin-left: 20%;
    font-size: 1.4em;
    line-height: 1.67em;
  }

  .mhacks-mid-ft-list-para, .mhacks-mid-ft-list-name, .mhacks-mid-ft-list-two-para{
    font-size: 1.4em;
  }

  .mhacks-mid-team-header{
    font-size: 3.1em;
  }

  .mhacks-mid-team-card{
    margin-top: -10%;
  }

  .mhacks-last-contact-bg{
    height: 110px;
  }

  .mhacks-last-contact-header{
    font-size: 3.1em;
  }

  .mhacks-last-contact-input, .mhacks-last-contact-textarea{
    font-size: 1em;
    padding: 8px;
  }

  .mhacks-last-contact-btn{
    height: 40px;
    font-size: 1.1em;
    padding: 8px;
    font-weight: bold;
  }

  .mhacks-last-contact-input-bg{
    height: 450px;
  }

  .mhacks-last-footer-bg{
    height: 150px;
  }

  .mhacks-last-contact-input {
    width: 60%;
    margin-left: 0.6vw;
  }
  
  .mhacks-last-contact-textarea {
    width: 60%;
    margin-left: 0.6vw;
  }
  
  .mhacks-last-contact-btn {
    width: 60%;
    height: 40px;
    margin-left: 0.6vw;
  }
}

@media only screen and (max-width: 1330px){
  .mhacks-tn-right-item{
    margin-left: -24vw;
    margin-right: 24vw;
  }

  .mhacks-top-header{
    font-size: 3.3em;
  }

  .mhacks-top-para{
    font-size: 1.6em;
  }

}

@media only screen and (max-width: 1290px){
  .mhacks-tn-right-item{
    margin-left: -28vw;
    margin-right: 28vw;
  }

  .mhacks-top-bg{
    height: 660px;
  }

  .mhacks-top-header{
    font-size: 3.1em;
  }

  .mhacks-top-para{
    font-size: 1.5em;
  }

  .mhacks-mid-team-header{
    font-size: 3em;
  }

  .mhacks-mid-team-card-pic-quote{
    font-size: 1.5em;
  }

  /* .mhacks-mid-container{
    margin-left: 4%;
  } */
}

@media only screen and (max-width: 1220px){
  .mhacks-top-header{
    font-size: 2.8em;
  }

  .mhacks-top-para{
    font-size: 1.4em;
  }

  .mhacks-top-bg{
    height: 640px;
  }

  .mhacks-mid-content, .mhacks-mid-content-business{
    font-size: 1.4em;
  }

  .mhacks-mid-mission-text{
    font-size: 3em;
  }

  .mhacks-mid-mission-content{
    font-size: 1.3em;
    margin-left: 12%;
  }

  .mhacks-mid-mission-sec-bg{
    width: 1000px;
  }

  .mhacks-mid-ft-text{
    font-size: 3em;
  }

  .mhacks-mid-ft-content{
    height: 120px;
  }

  .mhacks-last-contact-bg{
    height: 100px;
  }

  .mhacks-last-contact-header{
    font-size: 3em;
  }

  /* .mhacks-mid-container{
    margin-left: 2%;
  } */
}

@media only screen and (max-width: 1200px){
  .mhacks-tn-right-item{
    margin-left: -30vw;
    margin-right: 30vw;
  }

  .mhacks-top-bg{
    height: 620px;
  }

  .mhacks-mid-header, .mhacks-mid-header-business{
    font-size: 2.9em;
  }

  .mhacks-mid-bg, .mhacks-mid-bg-features{
    height: 120px;
  }

  .mhacks-mid-ft{
    height: 560px;
  }

  .mhacks-mid-team-header{
    font-size: 2.9em;
  }

  .mhacks-mid-team-card-pic-quote{
    font-size: 1.4em;
  }

  /* .mhacks-mid-container{
    margin-left: 8%;
  } */

  .mhacks-mid-ft-list-para, .mhacks-mid-ft-list-name, .mhacks-mid-ft-list-two-para{
    font-size: 1.3em;
  }

  .mhacks-mid-mission-text{
    font-size: 2.95em;
  }

  .mhacks-mid-mission-content{
    font-size: 1.25em;
  }

  .mhacks-mid-mission-sec-bg{
    width: 980px;
  }

  .mhacks-mid-team-card-pic-quote{
    font-size: 1.4em;
  }

  .mhacks-mid-team-card-pic-name{
    font-size: 1.3em;
  }

  .mhacks-mid-team-card-pic-position{
    font-size: 1.3em;
  }
}
/* ... */

